[package]
name = "larium-rs"
version = "0.1.1"
description = "Telegram bot for notification about new episode anime"
authors = ["Hkmori15"]
repository = "https://github.com/Hkmori15/Larium-rs"
edition = "2021"

[dependencies]
teloxide ={ version = "0.13.0", features = ["macros"] }
tokio ={ version = "1.41.1", features = ["full"] }
serde ={ version = "1.0.215", features = ["derive"] }
reqwest ={ version = "0.12.9", features = ["json"] }
mongodb = "3.1.0"
dotenvy = "0.15.7"
pretty_env_logger = "0.5.0"
log = "0.4.22"
futures = "0.3.31"
bson = "2.13.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
# strip = true